--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
            <li routerLinkActive="active">
-        <a routerLink="/shopping-list" >Shopping List</a>
+        <a routerLink="/shopping-list" style="margin-right: 12px;">Shopping List</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
